# BridgeFlow

./: .dockerignore  .gitignore  Dockerfile  README.md  celerybeat-schedule  config.json  config.py  debug.py  docker-compose.yml  main.py  notion_client.py  oauth.py  requirements-dev.txt  requirements.txt  scheduler.py  sheets_client.py  state_store.py  sync.py  test_notion.py  test_sheets.py  test_sync.py  transformer.py  vercel.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: FeedbackWidget.jsx  GlassCard.jsx  Modal.jsx  Navbar.jsx  StatusBadge.jsx  SyncLogs.jsx  ThemeToggle.jsx
frontend/src/hooks/: useInView.js  useTheme.js
frontend/src/pages/: Dashboard.jsx  Landing.jsx  PrivacyPolicy.jsx  Settings.jsx  Setup.jsx  TermsOfService.jsx
sdk/: README.md  pyproject.toml
sdk/bridgeflow/: __init__.py  cli.py  client.py  config.py  exceptions.py
tests/: test_routes.py
v2/: auth.py  celery_app.py  inngest_client.py  inngest_functions.py  models.py  notion_oauth.py  notion_service.py  oauth.py  sheets_service.py  tasks.py
