[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgeflow-cli"
version = "0.1.0"
description = "Python SDK and command-line client for BridgeFlow (Google Sheets -> Notion sync)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "jrjagdish" }]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "click>=8.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["bridgeflow", "notion", "google-sheets", "sync", "cli", "sdk"]

[project.urls]
Homepage = "https://github.com/jrjagdish/BridgeFlow"
Repository = "https://github.com/jrjagdish/BridgeFlow"
Issues = "https://github.com/jrjagdish/BridgeFlow/issues"

[project.scripts]
bridgeflow = "bridgeflow.cli:run"

[tool.setuptools.packages.find]
include = ["bridgeflow*"]
